Fix d3chart misalignment bug (shifting after the first drag and agora/feeds date resize) Clear out dragging draggable css types Add d3-scale-chromatic.v1.min.js as a static file

--- a/home/static/home/css/mybase.css
+++ b/home/static/home/css/mybase.css
@@ -337,3 +337,16 @@ div.glowColored:hover{
   align-self: center;
   font-size: 12.5px;
 }
+
+.draggable {
+  cursor: move; /* fallback if grab cursor is unsupported */
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+
+.dragging {
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
+}    
